[metadata]
name = NoIp
version = 1.0.0
author = Abhiram Shibu
author_email = abhiramshibu1998 at gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abhiramshibu/NoIp
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src